--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -2,6 +2,7 @@
 headless = true
 
 [theme]
+base = "light"
 primaryColor = '#F63366'
 backgroundColor = '#DEC9B2'
 secondaryBackgroundColor = '#F0F2F6'
